# supplier-invoice-automation

./: .env.example  .gitignore  CHANGES.md  Dockerfile  N8N_HTTP_REQUEST_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  txt.md
.bmad-core/: install-manifest.yaml
app/: config.py  exceptions.py  main.py  schemas.py  utils.py
app/api/v1/: endpoints.py
app/prompts/: invoice_prompts.py
app/services/: ai_service.py  cache_service.py  ocr_service.py
docs/: api-reference.md  architecture-newer.md  architecture.md  deployment-guide.md  developer-guide.md  n8n-workflow-story.md  prd.md  testing-guide.md
docs/architecture/: 1-introduction.md  11-infrastructure-and-deployment.md  12-error-handling-strategy.md  14-test-strategy-and-standards.md  15-security.md  16-checklist-results-report.md  17-next-steps.md  2-high-level-architecture.md  4-data-models.md  5-components.md  6-external-apis.md  7-core-workflows.md  8-rest-api-spec.md  9-database-schema.md  coding-standards.md  index.md  source-tree.md  tech-stack.md
docs/qa/gates/: 1.1-docker-fastapi-setup.yml  1.2-surya-ocr-integration.yml  1.3-redis-cache-setup.yml  2.1-ai-service-integration.yml  (+1 more)
docs/stories/: 1.1.docker-fastapi-setup.story.md  1.2.surya-ocr-integration.story.md  1.3.redis-cache-setup.story.md  2.1.ai-service-integration.story.md  3.1.error-handling.story.md  4.1.n8n-http-integration.story.md
tests/: conftest.py  mock_ocr_service.py  test_api.py  test_cache_service.py  test_error_handling.py  test_services.py  test_syntax.py  test_utils.py
tests/integration/: test_ocr_optional.py
